--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,31 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Self taught Software Developer" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>S0umyajit | Portfolio</title>
+  <title>Kagema Njoroge | Portfolio</title>
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
+  <meta itemprop="name" content="James Njoroge | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://firebasestorage.googleapis.com/v0/b/tomorrowkenyaweb.appspot.com/o/93333247.jpg?alt=media&token=e20346b1-e4f3-426f-b34d-21b57cd647be">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://njoroge.tomorrow.co.ke">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
+  <meta property="og:title" content="Kagema Njoroge | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://firebasestorage.googleapis.com/v0/b/tomorrowkenyaweb.appspot.com/o/93333247.jpg?alt=media&token=e20346b1-e4f3-426f-b34d-21b57cd647be">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
+  <meta name="twitter:title" content="Kagema Njoroge | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    content="https://firebasestorage.googleapis.com/v0/b/tomorrowkenyaweb.appspot.com/o/93333247.jpg?alt=media&token=e20346b1-e4f3-426f-b34d-21b57cd647be">
 </head>
 
 <body>
